# django-typed-app-settings

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish-package.yml  python-package.yml  run-tests.yml
src/typed_app_settings/: __init__.py  _get_annotations.py  _lib.py  lib.py
test/: test_typed_app_settings.py
tests/: test_typed_app_settings.py
