[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[project]
authors = [{ name = "Thomas Krapp", email = "t.krapp@gmail.com" }]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Environment :: Web Environment",
  "Framework :: Django",
  "Framework :: Django :: 3.0",
  "Framework :: Django :: 3.1",
  "Framework :: Django :: 3.2",
  "Framework :: Django :: 4.0",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Development Status :: 3 - Alpha",
]
dependencies = ["Django >= 3.0"]
dynamic = ["version", "description"]
license = { file = "LICENSE" }
name = "typed_app_settings"
readme = "README.md"
requires-python = ">=3.9"

[project.urls]
Home = "https://github.com/tkrapp/django-typed-app-settings"

[project.optional-dependencies]
dev = ["black"]

[tool.isort]
profile = "black"
